publish: search projects minor fix
generated from commit b760b48c67508eea59adc5b8e4d4a7e14c1a5b91

--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@ This action is paginated. See the pagination documentation for details.
 </span></code></pre>
 
 <h2 id="search-in-projects">Search in projects</h2>
-<pre class="highlight http"><code><span class="nf">GET</span> <span class="nn">/projects?search="pet"</span> <span class="k">HTTP</span><span class="o">/</span><span class="m">1.1</span>
+<pre class="highlight http"><code><span class="nf">GET</span> <span class="nn">/projects/search/recognize</span> <span class="k">HTTP</span><span class="o">/</span><span class="m">1.1</span>
 <span class="na">Content-Type</span><span class="p">:</span> <span class="s">application/json; charset=utf-8</span>
 </code></pre>
 
@@ -628,7 +628,7 @@ This action is paginated. See the pagination documentation for details.
 
 <h3 id="http-request">HTTP Request</h3>
 
-<p><code class="prettyprint">GET http://api.sengab.com/v1/projects/search?&lt;keyword&gt;</code></p>
+<p><code class="prettyprint">GET http://api.sengab.com/v1/projects/search/&lt;keyword&gt;</code></p>
 
 <h3 id="url-parameters">URL Parameters</h3>
 
