publish: Add actors file
generated from commit d6e68f69b2ffe82eab087831b792b5a531fd4040

--- a/index.html
+++ b/index.html
@@ -2772,6 +2772,44 @@ Offset refers to starts at and defaults to 1, limit can be any value between 0 a
 </tr>
 </tbody></table>
 
+          <h1 id="actors">Actors</h1>
+
+<h2 id="receptionist">Receptionist</h2>
+
+<h3 id="desc">Desc</h3>
+
+<p>This actor is the Interface of Our Actor System and Play Action methods.</p>
+
+<h3 id="received-messages">Received Messages</h3>
+
+<table><thead>
+<tr>
+<th>Message</th>
+<th>desc</th>
+</tr>
+</thead><tbody>
+<tr>
+<td>msg : ProjectMessage</td>
+<td>this is a trait which all Project Requests extends</td>
+</tr>
+<tr>
+<td>msg : UserMessage</td>
+<td>this is a trait which all User Requests extends</td>
+</tr>
+<tr>
+<td>msg : ContributionMessage</td>
+<td>this is a trait which all Contribution Requests extends</td>
+</tr>
+<tr>
+<td>msg : EnrollmentMessage</td>
+<td>this is a trait which all Enrollment Requests extends</td>
+</tr>
+<tr>
+<td>msg : CategoryMessage</td>
+<td>this is a trait which all Category Requests extends</td>
+</tr>
+</tbody></table>
+
       </div>
       <div class="dark-box">
           <div class="lang-selector">
