publish: Add created_at and category_id fields in Add Project request
generated from commit 7f0115e8f37f410f860f0adbb278e42f85aa5ed7

--- a/index.html
+++ b/index.html
@@ -570,6 +570,14 @@ This action is paginated. See the pagination documentation for details.
 <td>template_body</td>
 <td>Defines the template body for a project. It differs according to template_id, for more check Templates section.</td>
 </tr>
+<tr>
+<td>category_id</td>
+<td>Defines category id that project belongs to</td>
+</tr>
+<tr>
+<td>created_at</td>
+<td>Project creation time</td>
+</tr>
 </tbody></table>
 
 <blockquote>
