publish: minor fixes
generated from commit f8efd1ad2349da97d2edf8bb3a409f8316e29a0f

--- a/index.html
+++ b/index.html
@@ -2302,12 +2302,12 @@ This action is paginated. See the pagination documentation for details.
 <td>YES</td>
 </tr>
 <tr>
-<td>contribution.created_at</td>
+<td>created_at</td>
 <td>Date of contribution.</td>
 <td>YES</td>
 </tr>
 <tr>
-<td>contribution.data</td>
+<td>data</td>
 <td>Content of data will be different according to the project template, for more check Templates section.</td>
 <td>YES</td>
 </tr>
