--- a/index.html
+++ b/index.html
@@ -881,7 +881,7 @@ This action is paginated. See the pagination documentation for details.
 
 <p>Currently, we provide 6 static templates for projects, we will illustrate their structure through the following examples.</p>
 
-<h2 id="template-1">Template 1</h2>
+<h2 id="template-1-y-n-question-with-geolocation">Template 1 : Y/N question with geolocation</h2>
 
 <blockquote>
 <p>Add project</p>
@@ -1030,7 +1030,7 @@ This action is paginated. See the pagination documentation for details.
 </tr>
 </tbody></table>
 
-<h2 id="template-2">Template 2</h2>
+<h2 id="template-2-image-collector">Template 2 : Image collector</h2>
 
 <blockquote>
 <p>Add project</p>
@@ -1152,7 +1152,7 @@ This action is paginated. See the pagination documentation for details.
 </tr>
 </tbody></table>
 
-<h2 id="template-3">Template 3</h2>
+<h2 id="template-3-survey">Template 3 : Survey</h2>
 
 <blockquote>
 <p>Add Project</p>
@@ -1332,7 +1332,7 @@ This action is paginated. See the pagination documentation for details.
 </tr>
 </tbody></table>
 
-<h2 id="template-4">Template 4</h2>
+<h2 id="template-4-image-collector-with-geolocation">Template 4 : Image collector with geolocation</h2>
 
 <blockquote>
 <p>Add Project :</p>
