publish: Remove `is_featured` field & fix typo
generated from commit 3bf33ce7000994a05c310884b6f75a7bf6564918

--- a/index.html
+++ b/index.html
@@ -270,12 +270,6 @@
 <td></td>
 </tr>
 <tr>
-<td>is_featured</td>
-<td>boolean</td>
-<td>True for sponsored projects.</td>
-<td></td>
-</tr>
-<tr>
 <td>category</td>
 <td>Object</td>
 <td>Indicates the project category, contains <code class="prettyprint">id</code>,<code class="prettyprint">url</code>,and <code class="prettyprint">name</code></td>
@@ -2667,19 +2661,13 @@ Offset refers to starts at and defaults to 1, limit can be any value between 0 a
 <td></td>
 </tr>
 <tr>
-<td>is_featured</td>
-<td>boolean</td>
-<td>True for sponsored projects</td>
-<td></td>
-</tr>
-<tr>
 <td>brief_description</td>
 <td>String</td>
 <td>Short project description.</td>
 <td></td>
 </tr>
 <tr>
-<td>detailed_descrption</td>
+<td>detailed_description</td>
 <td>String</td>
 <td>Detailed project description.</td>
 <td></td>
